--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.7.1",
     "react-media-recorder": "^1.6.6",
-    "react-modal": "^3.16.1",
-    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.3",
     "yup": "^1.1.1"
   },
