--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^4.7.1",
     "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.4.3",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
